--- a/front-end/app/assets/templates/notes/show.html
+++ b/front-end/app/assets/templates/notes/show.html
@@ -1,6 +1,7 @@
 <div class="page-header">
-  <h1>{{note.title}}</h1><br>
-  <small>{{note.user.name}}</small>
+    <h1>{{note.title}}</h1>
+    <br>
+    <small>{{note.user.name}}</small>
 </div>
 <p>{{note.content}}</p>
 <p><span class="label label-info">{{note.category.name}}</span></p>
