--- a/ultiprep-ui/www/views/sub-views/notes.tags.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.tags.view.html
@@ -1,5 +1,5 @@
 <div class="container notes-container" ng-cloak>
-    <div class="masonry-item note" ng-class="note.colorClass" ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filter:{isArchived:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags)">
+    <div class="masonry-item note" ng-class="note.colorClass" ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filter:{isPinned:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags)">
         <div class="note-main" data-toggle="modal" data-target="#note-view-modal-{{$index}}">
             <h3 class="note-title">{{ note.title }}</h3>
             <p class="note-content" froala-view="note.content | noteTilePrettify"></p>
@@ -32,7 +32,7 @@
         <p class="container-message-text">No notes found here</p>
     </div>
 </div>
-<div class="modal fade-pop note-modal note-edit-modal" ng-repeat="note in notes | filter:{isArchived:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags" id="note-edit-modal-{{$index}}" role="dialog" edit-modals-loaded-directive>
+<div class="modal fade-pop note-modal note-edit-modal" ng-repeat="note in notes | filter:{isPinned:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags" id="note-edit-modal-{{$index}}" role="dialog" edit-modals-loaded-directive>
     <div class="modal-dialog">
         <div class="modal-content" ng-class="note.colorClass">
             <form class="edit-note-form">
@@ -59,7 +59,6 @@
                         <span title="Created {{note.dateCreated}}" class="opt-tooltip date">{{ note.dateCreated }}</span>
                     </div>
                     <div class="note-modal-opt">
-                        <a title="Speech input" class="opt-tooltip opt-icon-lg icon-mic speech-input" ng-click="speechInput($index)"></a>
                         <a title="Change color" class="opt-tooltip opt-icon-lg icon-palette colors-popup">
                             <ul>
                                 <li ng-class="colorClass" class="color-btn" ng-repeat="colorClass in colorClasses" ng-click="setNoteColor(note, colorClass)"></li>
@@ -82,7 +81,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade-pop note-modal note-view-modal" ng-repeat="note in notes | filter:{isArchived:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags" id="note-view-modal-{{$index}}" role="dialog" view-modals-loaded-directive>
+<div class="modal fade-pop note-modal note-view-modal" ng-repeat="note in notes | filter:{isPinned:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags" id="note-view-modal-{{$index}}" role="dialog" view-modals-loaded-directive>
     <div class="modal-dialog">
         <div class="modal-content" ng-class="note.colorClass">
             <div class="modal-header">
