--- a/ultiprep-ui/www/views/sub-views/notes.tags.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.tags.view.html
@@ -13,11 +13,6 @@
         </div>
         <div class="note-opt">
             <a title="Edit" class="opt-tooltip opt-icon icon-pencil" data-toggle="modal" data-target="#note-edit-modal-{{$index}}" ng-click="setCurrentNote(note)"></a>
-            <a title="Change color" class="opt-tooltip opt-icon icon-palette colors-popup">
-                <ul>
-                    <li class="color-btn" ng-class="colorClass" ng-repeat="colorClass in colorClasses" ng-click="setNoteColor(note, colorClass)"></li>
-                </ul>
-            </a>
             <a title="Pin" class="opt-tooltip opt-icon icon-archive" ng-hide="note.isPinned" ng-click="pinNote(note)"></a>
             <a title="Unpin" class="opt-tooltip opt-icon icon-unarchive" ng-show="note.isPinned" ng-click="unpinNote(note)"></a>
             <a class="opt-icon icon-dots menu-popup">
@@ -35,7 +30,7 @@
 </div>
 <div class="modal fade-pop note-modal note-edit-modal" ng-repeat="note in notes | filter:{isPinned:false} | filter:{isTrashed:false} | searchFor:searchString | filterTags:selectedTags" id="note-edit-modal-{{$index}}" role="dialog" edit-modals-loaded-directive>
     <div class="modal-dialog">
-        <div class="modal-content" ng-class="note.colorClass">
+        <div class="modal-content" ng-class="{'note-bg-pinned' : note.isPinned, 'note-bg' : !note.isPinned}">
             <form class="edit-note-form">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <div class="modal-header">
@@ -60,11 +55,6 @@
                         <span title="Created {{note.dateCreated}}" class="opt-tooltip date">{{ note.dateCreated }}</span>
                     </div>
                     <div class="note-modal-opt">
-                        <a title="Change color" class="opt-tooltip opt-icon-lg icon-palette colors-popup">
-                            <ul>
-                                <li ng-class="colorClass" class="color-btn" ng-repeat="colorClass in colorClasses" ng-click="setNoteColor(note, colorClass)"></li>
-                            </ul>
-                        </a>
                         <a title="Change tags" class="opt-tooltip opt-icon-lg icon-tag tags-popup">
                             <ul>
                                 <li ng-repeat="tag in tags">
@@ -104,11 +94,6 @@
                 </div>
                 <div class="note-modal-opt">
                     <a title="Edit" class="opt-tooltip opt-icon-lg icon-pencil" data-toggle="modal" ng-click="openEditModalViaViewModal(note, $index)"></a>
-                    <a title="Change color" class="opt-tooltip opt-icon-lg icon-palette colors-popup">
-                        <ul>
-                            <li ng-class="colorClass" class="color-btn" ng-repeat="colorClass in colorClasses" ng-click="setNoteColor(note, colorClass)"></li>
-                        </ul>
-                    </a>
                     <a title="Pin" class="opt-tooltip opt-icon-lg icon-archive" ng-click="pinNoteViaModal(note, $index)" ng-hide="note.isPinned" data-dismiss="modal"></a>
                     <a title="Unpin" class="opt-tooltip opt-icon-lg icon-unarchive" ng-click="unpinNoteViaModal(note, $index)" ng-show="note.isPinned" data-dismiss="modal"></a>
                     <a title="Delete" class="opt-tooltip opt-icon-lg icon-trash" ng-click="moveNoteToTrashViaModal(note, $index)" data-dismiss="modal"></a>
