--- a/ultiprep-ui/www/views/home.view.html
+++ b/ultiprep-ui/www/views/home.view.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="brand">
-                <a href="#"><span class="fa fa-paperclip"></span> Ultiprep</a>
+                <a href="#"><span class="fa fa-book"></span> Ultiprep</a>
             </div>
         </div>
     </div>
