--- a/ultiprep-ui/www/views/notes.view.html
+++ b/ultiprep-ui/www/views/notes.view.html
@@ -20,7 +20,7 @@
                 <a ui-sref="notes.state-notes"> Notes</a>
             </li>
             <li>
-                <a ui-sref="notes.state-pin"> Pinned Notes</a>
+                <a ui-sref="notes.state-pin"> Notebook</a>
             </li>
             <li>
                 <a ui-sref="notes.state-trash"> Trash</a>
