--- a/ultiprep-ui/www/views/sub-views/notes.trash.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.trash.view.html
@@ -1,5 +1,5 @@
 <div class="container notes-container" ng-cloak>
-    <div class="masonry-item note" ng-class="{'note-bg-pinned' : note.isPinned, 'note-bg' : !note.isPinned}" ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filter:{isTrashed:true} | searchFor:searchString | orderBy: '-isPinned')">
+    <div class="masonry-item note note-bg"  ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filterTrashed:currentUser | searchFor:searchString)">
         <div class="note-main" data-toggle="modal" data-target="#note-view-modal-{{$index}}">
             <h3 class="note-title">{{ note.title }}</h3>
             <p class="note-content" froala-view="note.content | noteTilePrettify"></p>
@@ -25,7 +25,7 @@
         <p class="container-message-text">Nothing here</p>
     </div>
 </div>
-<div class="modal fade-pop note-modal note-view-modal" ng-repeat="note in notes | filter:{isTrashed:true} | searchFor:searchString" id="note-view-modal-{{$index}}" role="dialog" view-modals-loaded-directive>
+<div class="modal fade-pop note-modal note-view-modal" ng-repeat="note in notes | filterTrashed:currentUser | searchFor:searchString" id="note-view-modal-{{$index}}" role="dialog" view-modals-loaded-directive>
     <div class="modal-dialog">
         <div class="modal-content" ng-class="{'note-bg-pinned' : note.isPinned, 'note-bg' : !note.isPinned}">
             <div class="modal-header">
